<resources>
    <string name="app_name">F1hub</string>
    <string name="btnGetDriversInfo">Get Drivers data</string>
    <string name="btnGetConstructorsInfo">Get Constructors data</string>
    <string name="btnShowNextCircut">Show where the next race is</string>


    <!-- drivers info fragment -->
    <string name="tvSelectDriverLabel">Please select the driver from the following options.</string>
    <string name="btnGetDriverData">Get Driver Data</string>
    <string name="btnLoadDriverData">Load Driver Data</string>
    <string name="tvSelectYearLabel">Select the year</string>
    <!-- constructors info fragment -->
    <string name="tvSelectConstructorLabel">Please select the constructor from the following options</string>
    <string name="btnGetConstructorData">Get Constructor Data</string>

    <!-- data list fragment -->
    <string name="tvDriversNames">Drivers Name</string>
    <string name="tvDriverPosition">Position</string>
    <string name="tvDriverPoints">Points</string>
    <string name="tvDriverPodiums">Podiums</string>

    <!-- race location fragment - whole page will be created in outcome 2 as it will be a api map -->
    <string name="tvRaceLocationMap">Click this to see your current location</string>
    <string name="tvRaceLocationOnMap">Click this to see the race current location</string>
    <string name="btnGetGPSLocation">GPS</string>
    <string name="btnGetRaceLocation">Race</string>
    <string name="btnCreateTrip">Create a trip between you and the next race</string>



    <!-- recycler view fragment -->

    <string name="btnHomePage">Back to Home</string>
    <string name="btnHomePage2">Back to Home</string>
    <string name="tvShowDriverDataFor">Driver data collected for the year</string>
    <string name="tvShowConstructorDataFor">Constructor data for</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="tvYearDisplay">2020</string>

    <integer name="etEnterYear">2020</integer>

    <string name="data_frag_download_error">Error downloading the driver data</string>

    <string name="driver_info_error">Error getting driver information from API</string>

    <string name="next_race_location">Error getting the next race location  from API</string>

    <string name="Race_Next_Location_Error"> ERROR GETTING NEXT RACE</string>





</resources>