<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".LocationSelectionFragment">

<TextView
    android:id="@+id/tvPageHeader"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/app_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/btnDriversInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/btnGetDriversInfo"
    app:layout_constraintEnd_toEndOf="@+id/tvPageHeader"
    app:layout_constraintStart_toStartOf="@+id/tvPageHeader"
    app:layout_constraintTop_toBottomOf="@+id/tvPageHeader" />

<Button
    android:id="@+id/btnConstructorsInfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/btnGetConstructorsInfo"
    app:layout_constraintEnd_toEndOf="@+id/btnDriversInfo"
    app:layout_constraintStart_toStartOf="@+id/btnDriversInfo"
    app:layout_constraintTop_toBottomOf="@+id/btnDriversInfo" />

    <Button
        android:id="@+id/btnShowNextCircut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnShowNextCircut"
        app:layout_constraintEnd_toEndOf="@+id/btnConstructorsInfo"
        app:layout_constraintStart_toStartOf="@+id/btnConstructorsInfo"
        app:layout_constraintTop_toBottomOf="@+id/btnConstructorsInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>